<resources>
    <string name="app_name">Food Magnet</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_activity_sign_in">Sign In Into Apps</string>
    <string name="sign_up">Sign Up</string>
    <string name="tab_menu_utama">Menu Utama</string>
    <string name="tab_kedai_sendiri">Kedai Ku</string>
    <string name="tab_promosi_kedai">Promosi Kedai</string>
    <string name="str_nama_kedai">Nama Kedai</string>
    <string name="str_no_telephone">No Telephone</string>
    <string name="str_jenis_makanan">Jenis Makanan</string>
    <string name="str_alamat_kedai">Alamat</string>
    <string name="str_waktubuka_kedai">Waktu Buka</string>
    <string name="str_waktututup_kedai">Waktu Tutup</string>
    <string name="str_julat_kedai">Julat Harga</string>
    <string name="str_gambar_kedai">Gambar Kedai</string>
    <string name="str_gambar_makanan">Gambar Makanan</string>
    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="tambah_kedai">Tambah Ler Kedai</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="camera_button_text">Upload</string>
    <string name="download">Download</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>
    <string name="lblPause">Pause GPS</string>
    <string name="lblResume">Resume GPS</string>
    <string name="lblLatitude">Latitude</string>
    <string name="lblLongitude">Longitude</string>
    <string name="lblZero">0.0</string>
    <string name="lblGPSAge">GPS Age</string>
    <string name="lblOpenExistingImage">Open Existing Image</string>
    <string name="title_activity_color_capture">ColorCaptureActivity</string>
    <string name="lblTakePhoto">Take Photo</string>
    <string name="lblTakeNewPhoto">Take New Photo</string>
    <string name="downladingPlantNames">Downloading Plant Names</string>
    <string name="lblCancel">Cancel</string>
    <string name="unableToSaveKedai">Unable to save kedai</string>
    <string name="lblSearchTerm">Enter Search Term</string>
    <string name="lblSearch">Search</string>
    <string name="lblLocation">Location</string>
    <string name="lblBlank"></string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="account_setting">Account Setting</string>
    <string name="title_activity_account_setting">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tambah_kedai">TambahKedai</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_view_kedai">ViewKedai</string>
</resources>